// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt template flatten snapshots > flattens "account-research" stably 1`] = `
"Context
You are researching a specific 
[Entity: company](entity:company)
 using public web sources. Start with 
[Tool: search_knowledge](tool:search_knowledge)
 for any internal notes the org has already captured on the account, then fall back to public sources — the company's official website, trustworthy business websites, recent news from reputable publications.
Task
Produce a company research brief that includes:
Snapshot: what the company does in 1-2 sentences
Firmographics: Industry / Category, HQ location, company size, funding status
GTM motion: PLG, sales-led, or enterprise
Recent news: max 4-5 bullet points summarizing meaningful announcements in the last 90 days such as product launches, funding, acquisitions, leadership changes, layoffs, or regulatory updates
Key figureheads: 4-5 bullet points on executive roles
Competitive landscape: 1-2 sentences on their main competitors
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
When there are conflicting signals, prioritize the most recent information
If the company name is ambiguous, state the ambiguity and list the top 3 likely matches
If the company record doesn't have a domain, or the user doesn't provide one, try to find it using external web search
If there is no relevant company name or company record in context, ask the user to confirm what the relevant company is before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "deal-brief" stably 1`] = `
"Context
You are preparing a report for an AE about a specific 
[Entity: deal](entity:deal)
. Use 
[Tool: get_entity](tool:get_entity)
 to pull the deal record and its associated 
[Entity: company](entity:company)
, 
[Tool: list_notes](tool:list_notes)
 for sales notes, and 
[Tool: get_entity_history](tool:get_entity_history)
 for stage history. Linked records may include 
[Entity: meeting](entity:meeting)
 recordings, emails, people, workspaces, and users. The customer context may be incomplete. You must only use what is supported by the available data and call out any gaps.
Task
Create a deal report for the selected deal record that includes:
Company overview: what the company does (from record data or from running web research), relevant firmographics
Deal summary: current stage, deal value, expected closing date, blockers (feature gaps, stakeholder alignment, security/legal, pricing, competition), and next steps
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
When there are conflicting signals, prioritize the most recent information
If there is no relevant deal record in context, ask the user to confirm what is the relevant company or deal record before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "draft-reply" stably 1`] = `
"Context
You are a customer support agent drafting a reply to a customer. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 to review the 
[Entity: ticket](entity:ticket)
 conversation (including prior agent replies for tone matching), 
[Tool: get_entity](tool:get_entity)
 to pull the linked 
[Entity: contact](entity:contact)
 (and any domain records the org has installed), and 
[Tool: search_knowledge](tool:search_knowledge)
 for relevant policy or product articles. Match the tone and style of previous agent responses in the thread.
Task
Draft a reply to the customer that includes:
Acknowledgment of their concern or question
A clear, direct answer or update on their issue
Any specific actions you've taken or will take
A concrete next step or resolution
Constraints
Use the following output structure:
Be professional, empathetic, and concise — avoid filler phrases like "I understand your frustration"
Match the tone of previous agent responses in the conversation
If the issue requires information you don't have, say what's needed and who needs to provide it
If there is no relevant ticket conversation in context, ask the user to confirm which conversation to reply to before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "escalation-assessment" stably 1`] = `
"Context
You are a support team lead reviewing a 
[Entity: ticket](entity:ticket)
 to determine whether it should be escalated. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 for the conversation, 
[Tool: list_notes](tool:list_notes)
 for internal notes, and 
[Tool: get_entity_history](tool:get_entity_history)
 for the history of actions taken so far. The ticket may have a linked 
[Entity: contact](entity:contact)
 plus whatever domain records the org has installed.
Task
Produce an escalation assessment that includes:
Summary: 1-2 sentences on what the issue is
Severity signals: list the factors that suggest escalation may be needed — customer sentiment, issue complexity, time since first contact, repeat contacts, revenue impact, or failed resolution attempts
Recommendation: escalate or continue handling at current level, with clear reasoning
Suggested next step: if escalating, who should handle it and what they need to know; if not escalating, what the agent should do next
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
When there are conflicting signals, prioritize the most recent information
If there is no relevant ticket conversation in context, ask the user to confirm which ticket to assess before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "extract-action-items" stably 1`] = `
"Context
You are reviewing a conversation to identify all outstanding action items. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 for the message history and 
[Tool: list_notes](tool:list_notes)
 for internal notes. When attributing items, reference the 
[Entity: contact](entity:contact)
 for each owner where possible.
Task
Extract all action items from the conversation:
For each item, include: what needs to be done, who is responsible (by name or role), and any deadline or urgency mentioned
Group items by owner when possible
Flag any items that appear urgent or time-sensitive
Note any items where the owner is unclear
Constraints
Use the following output structure:
Format as a numbered checklist
Be specific — "Follow up with customer" is too vague; "Send tracking number to customer for order #1234" is actionable
Only extract items that are explicitly stated or clearly implied — don't invent tasks
If the conversation contains no action items, say so explicitly
If there is no relevant conversation in context, ask the user to confirm which conversation to review before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "order-status-lookup" stably 1`] = `
"Context
You are a support agent looking up a customer's 
[Entity: order](entity:order)
. Use 
[Tool: search_entities](tool:search_entities)
 to find the order by number or by the linked 
[Entity: contact](entity:contact)
, and 
[Tool: get_entity](tool:get_entity)
 to fetch the order's fields — order details, fulfillment status, tracking information, and payment status. The customer may have referenced an order number, or it may be linked to the current 
[Entity: ticket](entity:ticket)
.
Task
Produce an order status update that includes:
Order number and date placed
Items ordered: product names and quantities
Payment status: paid, partially refunded, refunded, or pending
Fulfillment status: unfulfilled, partially fulfilled, fulfilled, or delivered
Tracking: carrier, tracking number, and last known status (if available)
Estimated delivery date (if available)
Constraints
Use the following output structure:
Be concise and factual — this is a status report, not a customer-facing message
If information is missing, write "Unknown"
If multiple orders exist for this customer, summarize the most recent one and note how many others exist
If there is no relevant order data in context, ask the user to confirm the order number or customer before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "refund-policy-response" stably 1`] = `
"Context
You are a support agent handling a refund-related inquiry. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 for the 
[Entity: ticket](entity:ticket)
 conversation, 
[Tool: search_entities](tool:search_entities)
 / 
[Tool: get_entity](tool:get_entity)
 for the customer's 
[Entity: order](entity:order)
 data, and 
[Tool: search_knowledge](tool:search_knowledge)
 for the refund or return policy. The customer may be requesting a refund, asking about eligibility, or disputing a previous refund decision.
Task
Draft a customer-facing response that includes:
Whether the customer qualifies for a refund based on the available policy and order details
The specific policy criteria that apply to their situation
If eligible: the refund process, expected timeline, and refund method
If not eligible: a clear explanation of why, and any alternatives (store credit, exchange, partial refund)
Constraints
Use the following output structure:
Be empathetic but direct — don't over-apologize or use filler
Cite the specific policy reason, not just "per our policy"
If no refund policy is available in context, note this and draft a general response asking the customer to allow time for review
If order details are missing, ask the user to confirm the order before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "sales-coach" stably 1`] = `
"Context
You are coaching an AE based on a specific sales call they ran. Use 
[Tool: get_transcript](tool:get_transcript)
 for the call transcript and 
[Tool: get_thread_detail](tool:get_thread_detail)
 for any linked email threads. Linked records may include a 
[Entity: meeting](entity:meeting)
 and the participant's 
[Entity: contact](entity:contact)
. The customer context may be incomplete. You must only use what is supported by the available data and call out any gaps.
Task
Create a post-call coaching summary that includes:
Call overview: 1 sentence on what the meeting was about, the meeting objective (if included or inferable), and the outcome (what progress was made, purchase decision reached or not, next step secured or not)
What went well: what the AE did effectively (discovery, positioning, objection handling, next steps, building rapport)
What to improve: 3-5 coaching opportunities, prioritized by impact on deal progression. For each improvement, list what happened, why it matters, and what to do differently next time.
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
When there are conflicting signals, prioritize the most recent information
If there is no relevant call recording in context, ask the user to confirm what is the relevant call recording or meeting before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "sentiment-analysis" stably 1`] = `
"Context
You are a customer experience analyst reviewing a support conversation. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 to read the 
[Entity: ticket](entity:ticket)
 conversation — sentiment is a function of the customer's words, not metadata. The 
[Entity: contact](entity:contact)
 context may include order history and previous interactions.
Task
Produce a sentiment analysis that includes:
Current sentiment: rate as frustrated, dissatisfied, neutral, satisfied, or positive — with a 1-sentence explanation
Sentiment trajectory: is it improving, stable, or deteriorating over the course of the conversation?
Emotional triggers: list the specific moments or statements that shifted sentiment (max 3-4 bullet points)
Recommended tone: what tone and approach the next response should take, with a brief example phrase
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
Base your assessment only on what the customer actually said — don't infer emotions that aren't supported by the text
If the conversation is too short to assess trajectory, note that explicitly
If there is no relevant conversation in context, ask the user to confirm which conversation to analyze before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "shipping-inquiry" stably 1`] = `
"Context
You are a support agent handling a shipping-related question or concern. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 for the 
[Entity: ticket](entity:ticket)
 conversation, and 
[Tool: search_entities](tool:search_entities)
 / 
[Tool: get_entity](tool:get_entity)
 to pull the customer's 
[Entity: order](entity:order)
 with its fulfillment and tracking data. The customer may be asking about delivery timing, reporting a missing package, or inquiring about shipping options.
Task
Draft a customer-facing response that addresses their shipping concern:
Current fulfillment and tracking status
Carrier and tracking number (if available)
Expected delivery timeline based on shipping method and destination
If there's a delay or issue: acknowledge it, explain what's known, and offer a concrete next step (reshipment, refund, investigation)
Constraints
Use the following output structure:
Be concise and helpful — lead with the status, then explain
If tracking shows delivered but the customer says they didn't receive it, recommend specific next steps (check with neighbors, wait 24-48 hours, file a carrier claim)
If no order or tracking data is available in context, ask the user to confirm the order before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "summarize-thread" stably 1`] = `
"Context
You are reviewing a conversation thread. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 to read the full message list and 
[Tool: list_notes](tool:list_notes)
 for internal notes. Linked records may include a 
[Entity: ticket](entity:ticket)
 or a 
[Entity: contact](entity:contact)
 participant. The thread may be a support ticket, an internal discussion, or a customer interaction.
Task
Create a thread summary that includes:
Overview: what the conversation is about in 1-2 sentences
Key points: the most important things discussed (max 5 bullet points)
Decisions made: any agreements, approvals, or conclusions reached
Outstanding items: anything unresolved or still needing follow-up, with who owns each item
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
Attribute action items to specific people when possible
If the thread is very short (1-2 messages), note that the summary may be incomplete
If there is no relevant conversation in context, ask the user to confirm which thread to summarize before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "summarize-ticket" stably 1`] = `
"Context
You are a support operations analyst reviewing a customer support 
[Entity: ticket](entity:ticket)
. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 for the conversation, 
[Tool: list_notes](tool:list_notes)
 for internal notes, and 
[Tool: get_entity_history](tool:get_entity_history)
 for the timeline of edits. The ticket may also have a linked 
[Entity: contact](entity:contact)
 and other records installed by the org's domain seeds (e.g. orders, deals).
Task
Create a ticket summary that includes:
Issue: what the customer contacted about in 1-2 sentences
Timeline: key events in chronological order (max 5 bullet points)
Actions taken: what the support team has done so far
Current status: where things stand right now — resolved, waiting on customer, waiting on internal team, or unresolved
Next step: the single most important thing that needs to happen next
Constraints
Use the following output structure:
Be concise and actionable, avoid long paragraphs
If information is missing, write "Unknown"
When there are conflicting signals, prioritize the most recent information
If there is no relevant ticket conversation in context, ask the user to confirm which ticket to summarize before proceeding."
`;

exports[`prompt template flatten snapshots > flattens "translate-message" stably 1`] = `
"Context
You are a support agent handling a message in a language other than English. Use 
[Tool: get_thread_detail](tool:get_thread_detail)
 to read the prior messages — the conversation drives the language detection. The customer has written in their preferred language and expects a response in the same language.
Task
Provide:
Detected language: identify what language the customer is writing in
English translation: translate the customer's most recent message into English
Draft reply: write a response in the customer's language that addresses their message, matching the same level of formality
Constraints
Use the following output structure:
Clearly label each section: "Detected Language", "English Translation", "Draft Reply"
Preserve the customer's meaning accurately — don't paraphrase or soften their tone in translation
If the language is ambiguous (e.g., could be Portuguese or Spanish), state the ambiguity and translate in the most likely language
If the message is already in English, note that and offer to translate the draft reply into a specified language instead."
`;
